# mde-tauri

./: .gitignore  AIGC_69_对比文档.md  ARCHITECTURE.md  LICENSE  README.md  README_EN.md  _ls.tmp.txt  build-out.txt  debug-apk-build-fail.md  debug-milkdown-codeblock-selection.md  index.html  package-lock.json  package.json  showcase.html  vite.config.js  ~$_基于Tauri的Markdown编辑器.docx
.cursor/plans/: mde-tauri_项目计划书_4d37651a.plan.md
.trae/specs/annotate-code-comments/: checklist.md  spec.md  tasks.md
.trae/specs/build-paper-code-showcase/: checklist.md  spec.md  tasks.md
.trae/specs/document-project-deep-dive/: checklist.md  spec.md  tasks.md
UI/: md-editor.html
docs/: Tauri的原生Rust Command讲解.md  主题切换涟漪动画怎么实现的.md  主题和国际化设计讲解.md  内容检索和文件检索怎么实现的.md  同步模块代码实现详解.md  在云同步中jwt身份验证模块的具体文档.md  编辑器主题实现讲解.md  自动保存和手动保存怎么实现的.md  设置模块实现讲解.md  资源管理器按钮实现位置说明.md  跨平台如何实现.md  配置导入导出实现讲解.md  附录C-源程序清单（Markdown编辑器核心逻辑）.md  项目文件管理实现讲解.md
docs/Function/: F-01-编辑器主体模块.md  F-02-文件管理模块.md  F-04-设置与个性化模块.md  F-06-多模式编辑.md  F-07-WYSIWYG 所见即所得编辑.md  F-09-多视图一致性.md  F-10-多标签管理.md  F-11-编辑缓冲区机制.md  F-12-大纲视图.md  F-14-GFM 兼容渲染.md  F-15-表格与任务列表.md  F-16-LaTeX 数学公式.md  F-19-脚注与部分 HTML 支持.md  F-22-文件创建.md  F-23-文件打开.md  F-26-本地保存与另存为.md  F-27-最近文件.md  F-28-书签管理.md  F-29-面包屑与路径导航.md  F-30-外部文件变化监听.md  F-31-全局搜索.md  F-32-文件名搜索.md  F-33-文件内容搜索.md  F-34-资源管理器级定位能力.md  F-35-登录.md  F-37-身份认证.md  F-38-文档同步.md  F-40-增量云同步.md  F-43-同步状态查看.md  F-44-断网恢复与失败重试.md  F-45-设备绑定.md  F-47-内容校验与压缩传输.md  F-48-mutation 队列调度.md  F-49-通用设置.md  F-50-外观设置.md  F-51-编辑器设置.md  F-53-本地持久化配置.md  F-55-桌面端窗口与系统交互.md  F-56-Android SAF 文件访问.md  F-59-移动端轻量检索方案.md
docs/论文析出/: paper-problems-and-features.docx  功能技术文档.md  问题技术文档.md
docs/论文析出/按功能拆分/: 13-并发.md  F-03-云同步模块.md  F-05-跨平台适配模块.md  F-08-Markdown 实时预览.md  F-13-延迟自动保存.md  F-17-Mermaid 图表渲染.md  F-18-代码块高亮.md  F-20-工作目录加载.md  F-21-文件树浏览.md  F-24-文件重命名.md  F-25-文件删除.md  F-36-注册.md  F-39-配置同步.md  F-41-基于版本号的冲突检测.md  F-42-冲突解决.md  F-46-同步资格判定.md  F-52-云同步设置.md  F-54-跨平台运行.md  F-57-Android 私有目录回退.md  F-58-小屏布局与安全区适配.md  README.md
mde-server/: .env.example  .vercelignore  Dockerfile  VERCEL.md  package-lock.json  package.json  tsconfig.json
mde-server/src/: app.module.ts  main.ts  setup.ts
mde-server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
mde-server/src/schemas/: sync-config.schema.ts  sync-document.schema.ts
mde-server/src/sync/: sync.controller.ts  sync.module.ts  sync.service.ts
releases/: MDE-v0.10.md
scripts/: generate-showcase-data.mjs
showcase/: index.html  package-lock.json  package.json
showcase/scripts/: generate-showcase-data.mjs
showcase/src/: ShowcaseApp.jsx  main.jsx
sketch/: md-editor 2 Dark Mode (1).sketch  md-editor 2 LIght Mode (1).sketch
src/: App.jsx  main.jsx  monaco-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/antd/: ThemedConfigProvider.jsx  icons.js
src/configs/: file-extensions.json
src/hooks/: useEditorBufferContent.js  useFileManager.js  useHorizontalDragScroll.js  useResponsiveLayout.js  useViewportInsets.js
src/i18n/: index.js
src/services/: apiClient.js  syncEngine.js
src/store/: useAuthStore.js  useConfigStore.js  useDeviceStore.js  useEditorStore.js  useExternalDocsStore.js  useFileIdStore.js  useFileStore.js  useNotificationStore.js  useSyncStore.js  useThemeStore.js  useToastStore.js  userScope.js
src/utils/: androidSaf.js  classNames.js  debounce.js  editorBuffer.js  fileLanguage.js  footnoteParser.js  markdownAssets.js  monacoLocale.js  monacoLocaleBoot.js  monacoShiki.js  pathUtils.js  platform.js  settingsSync.js  tauriApi.js
(+75 files in other folders)
