[package]
name = "mde"
version = "0.1.0"
description = "A cross-platform Markdown editor based on Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "mde_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[features]
default = []

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
tokio = { version = "1.0.0", features = ["full"] }
encoding_rs = "0.8"
notify = "6.1"
once_cell = "1.19"
open = "5.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }
